--- a/src/br/com/wss/viwer/FrmComputador.form
+++ b/src/br/com/wss/viwer/FrmComputador.form
@@ -11,7 +11,6 @@
     <Property name="iconifiable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Cadastro Computador"/>
     <Property name="toolTipText" type="java.lang.String" value=""/>
-    <Property name="enabled" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -189,7 +188,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTNomeCoputador">
           <Events>
-            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTNomeCoputadorKeyPressed"/>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTNomeCoputadorFocusLost"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelMac">
@@ -199,7 +198,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTMacCoputador">
           <Events>
-            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTMacCoputadorKeyPressed"/>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTMacCoputadorFocusLost"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jTId">
